--- a/src/app/spotbie/profile-header/albums/albums.component.html
+++ b/src/app/spotbie/profile-header/albums/albums.component.html
@@ -155,7 +155,9 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close album</div>
+    <div class="spotbie-close-button" (click)="closeWindow()">
+        <i class="fa fa-times"></i>
+    </div>
 
 </div>
 
@@ -281,7 +283,7 @@
 
         </form>
 
-        <div class='spotbie-close-button' (click)="toggleAlbumMakerForm()">close</div>
+        <div class='spotbie-close-button' (click)="toggleAlbumMakerForm()"><i class="fa fa-times"></i></div>
 
     </div>
 
@@ -378,7 +380,7 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
 </div>
 
