--- a/src/app/spotbie/profile-header/albums/edit-media/edit-media.component.html
+++ b/src/app/spotbie/profile-header/albums/edit-media/edit-media.component.html
@@ -56,7 +56,7 @@
     <div class='spotbie-exif-optional'></div>
     <div class='spotbie-ai-items-in-image'></div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
     <div class='spotbie-toast-message animated fadeIn' *ngIf="successful_update">Album Item Updated.</div>
 
