--- a/src/app/spotbie/profile-header/albums/share-album/share-album.component.html
+++ b/src/app/spotbie/profile-header/albums/share-album/share-album.component.html
@@ -63,7 +63,7 @@
         <input class='spotbie-input' type='text' [attr.value]="album_link" readonly #spotbie_share_link/>
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
     <div class='spotbie-toast-message animated fadeIn' *ngIf="successful_url_copy">Album link copied.</div>
 
