--- a/src/app/spotbie/spotbie-logged-in/friends/around-me/around-me-actions/around-me-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/around-me/around-me-actions/around-me-actions.component.html
@@ -34,7 +34,7 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeActionsx()">close</div>
+    <div class="spotbie-close-button" (click)="closeActionsx()"><i class="fa fa-times"></i></div>
 
     <div class="spotbie-successful-action-wrapper" *ngIf="successful_action">
         <div class="spotbie-successful-action-title">
