--- a/src/app/spotbie/spotbie-logged-in/friends/blocked-users/blocked-user-actions/blocked-user-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/blocked-users/blocked-user-actions/blocked-user-actions.component.html
@@ -32,7 +32,7 @@
         <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
     </div>   
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
     <div class="spotbie-successful-action-wrapper" *ngIf="successful_action">
         <div class="spotbie-successful-action-title">
