--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -488,7 +488,9 @@
         </form>
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindow()">
+        <i class="fa fa-times"></i>
+    </div>
 
     <div class="spotbie-select-menu" *ngIf="load_animals">
         
@@ -501,7 +503,9 @@
             </table>            
         </div>
 
-        <div class="spotbie-close-button" (click)="closeAnimals()">close</div>
+        <div class="spotbie-close-button" (click)="closeAnimals()">
+            <i class="fa fa-times"></i>
+        </div>
 
     </div>
 
