--- a/src/app/helpers/loading-helper/loading-screen/loading-screen.component.html
+++ b/src/app/helpers/loading-helper/loading-screen/loading-screen.component.html
@@ -1,3 +1,3 @@
 <div class='spotbie-loading-screen' >
-    <img class='spotbie-loading-gif' src='../../../../assets/images/loading.gif'/>
+    <i class='spotbie-loading-gif fa fa-spinner'></i>
 </div>
