--- a/src/app/spotbie/profile-header/albums/album-media-likes/album-media-likes.component.html
+++ b/src/app/spotbie/profile-header/albums/album-media-likes/album-media-likes.component.html
@@ -34,7 +34,7 @@
     
         </div>
     
-        <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+        <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
     
     </div>
 </div>
