--- a/src/app/spotbie/spotbie-logged-in/friends/friends.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/friends.component.html
@@ -26,6 +26,6 @@
         <app-around-me *ngIf="around_me"></app-around-me>
     </div>
     
-    <div class="spotbie-close-button" (click)="closeWindowX()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindowX()"><i class="fa fa-times"></i></div>
 
 </div>
