--- a/src/app/spotbie/spotbie-logged-in/friends/my-friends/friend-actions/friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/my-friends/friend-actions/friend-actions.component.html
@@ -30,7 +30,7 @@
 
         <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
 
-        <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+        <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
     </div>
 
