--- a/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
@@ -35,7 +35,7 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
     <div class="spotbie-successful-action-wrapper" *ngIf="successful_action">
         <div class="spotbie-successful-action-title">
