--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
@@ -162,6 +162,8 @@
   
   </div>
 
-  <div class="spotbie-close-button" (click)="closeWindowX()">close</div>
+  <div class="spotbie-close-button" (click)="closeWindowX()">
+    <i class="fa fa-times"></i>
+  </div>
 
 </div>
