--- a/src/styles.css
+++ b/src/styles.css
@@ -184,7 +184,7 @@ a, a:hover, a:active, a:after{
     max-height: 50px;
     background-color: white;
     border-radius: 99%;
-    box-shadow: inset 2px 2px 5px #9e9e9e;
+    box-shadow: inset 2px 2px 6px #ffffff0f;
 }
 .spotbie-close-button{
     position: fixed;
@@ -384,9 +384,6 @@ a, a:hover, a:active, a:after{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    height: 150px;
-    min-height: 150px;
-    max-height: 150px;
 }
 .spotbie-main-holder{
     position: relative;
@@ -678,6 +675,12 @@ a, a:hover, a:active, a:after{
     background-color: rgba(0,0,0,.23);
     border-radius: 10px;
 }
+.mat-slider.mat-slider-horizontal .mat-slider-track-fill {
+    background-color: white;
+  }
+  .mat-accent .mat-slider-thumb {
+    background-color: white;
+  }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { 
 
